<resources>
    <string name="app_name">RiderMemory</string>
    <string name="add_button">追加</string>
    <string name="save_button">保存</string>
    <string name="back_button">戻る</string>
    <string name="Date">日付</string>
    <string name="Place">場所</string>
    <string name="MileageUnit">km</string>
    <string name="MoneyUnit">円</string>
    <string name="Mileage">走行距離</string>
    <string name="RefuelMountUnit">L</string>
    <string name="GasoPriceUnit">円/L</string>
    <string name="RefuelMount">給油量</string>
    <string name="GasoPrice">ガソリン単価</string>
    <string name="RefuelFee">給油代</string>
    <string name="edit_button">編集</string>
    <string name="AirPressureUnit">kPa</string>
    <string name="VehicleName">車両名</string>
    <string name="Model">型式</string>
    <string name="NewMileage">購入時の走行距離数</string>
    <string name="TireSizeF">Fタイヤサイズ</string>
    <string name="TireAirPressureF">Fタイヤ空気圧</string>
    <string name="TireSizeR">Rタイヤサイズ</string>
    <string name="TireAirPressureR">Rタイヤ空気圧</string>
    <string name="EngineOilaMoun">エンジンオイル量</string>
    <string name="OilViscosity">エンジンオイル粘度</string>
    <string name="TireAirPressureUnit">kPa</string>
    <string name="EngineOilViscosityUnit">w</string>
    <string name="EngineOilViscosityBar">－</string>
    <string name="Period">期間</string>
    <string name="Item">項目</string>
    <string name="totalMoney">合計金額</string>
    <string name="Money">金額</string>
    <string name="TouringRecord">ツーリング記録</string>
    <string name="MainteRecord">メンテナンス記録</string>
    <string name="RefuelRecord">給油記録</string>
    <string name="ExpenseRecode">出費記録</string>
    <string name="FuelEfficiency">燃費</string>

    <string name="validate_error_dialog_title">入力エラー</string>
    <string name="validate_required_message">必須入力です。</string>
    <string name="validate_digits_message">数字のみ9桁以下で入力してください。</string>
    <string name="validate_decimal_message">数字と小数点のみの9桁以下で入力してください。</string>
    <string name="validate_date_format_message">日付の入力が不正です。</string>
</resources>